# borromeanRings

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  NOTICE  PLAN-v0.md  README.md  borromeanrings.toml  borromeo.toml  init.sh  install-global.sh  merge.sh  pyproject.toml  verify.sh
.claude/: settings.json
.claude/hooks/: post_edit_format.sh  pre_bash_guard.sh  prompt_rewrite.sh  stop_gate.sh
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: verify.yml
checks/: 00_build.sh  05_hygiene.sh  10_format.sh  20_lint.sh  30_typecheck.sh  40_test.sh  50_security.sh  _lib.sh  manifest.json
checks/python/: 00_build.sh  10_format.sh  20_lint.sh  30_typecheck.sh  40_test.sh  50_security.sh
checks/shared/: 05_hygiene.sh  06_git_identity.sh  07_layout.sh
docs/: AI-FLUENCY.md  ARCHITECTURE.md  DELAYED-DECISIONS.md  MANIFESTO.md  PROCESS.md  REQUIREMENTS.md  ROADMAP.md  SPEC-deep-research.md  SPEC-prompt-rewrite.md  TEST-PLAN.md  TESTING.md  VISION.md
docs/adr/: 0001-substrate-claude-code.md  0002-model-hosting-frontier-api.md  0003-no-local-model-wsl2.md  0004-first-stack-python.md  0005-checks-registry-and-adapter-seam.md  0007-gated-explicit-merge.md  0008-ci-runs-the-gate.md  0009-command-orchestrated-auto-merge.md  0010-config-policy-spine.md  0011-prompt-rewriting.md  0012-engineering-process.md  0013-portability-reference-model.md  0014-research-enhances-agent-not-searches.md  README.md  (+6 more)
tests/: test_change_detect.py  test_check_timeout.py  test_deep_research.py  test_git_identity.py  test_hygiene.py  test_layout.py  test_merge_policy.py  test_prompt_rewrite.py  test_sample.py  test_spine.py
tools/: deep_research_demo.py  deep_research_run.py
(+29 files in other folders)
