[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "meta-harness"
version = "0.0.0"
description = "borromeo — a model- and harness-agnostic meta-harness that enforces engineering standards as deterministic gates."
requires-python = ">=3.10"

[project.optional-dependencies]
# The check toolchain. Installed in CI via `pip install -e ".[dev]"` so the gate
# runs the same checks on GitHub's servers as it does locally.
dev = [
  "ruff>=0.6",
  "mypy>=1.10",
  "pytest>=8",
  "pytest-cov>=5",
  "bandit>=1.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["cs130", ".meta-harness"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src"]
branch = true
